deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: met
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: met-http
  selector:
    app: met
